tdf#137180 RTF import: fix bad left margin with direct format/para style/num

This is a case when a left margin appears as direct formatting on a
paragraph, the paragraph has a style and the style has the same left
margin. But the paragraph has a numbering as well: so it's not valid to
deduplicate the left margin from the direct formatting, because then the
left margin from the numbering will be used, which can be a different
value.

(cherry picked from commit 3ee3ae85de3a29ebfb89e75960b65417bfd6ca55)

Conflicts:
	writerfilter/source/rtftok/rtfsprm.cxx

Change-Id: I5e27502b8d505bdfddfdc910858f62e501db35a5